# ckanext-opendata-theme

./: .gitignore  MANIFEST.in  README.md  package-lock.json  pyproject.toml  setup.cfg  setup.py  test.ini
ckanext/opendata_theme/: .gitignore  cli.py  helpers.py  package-lock.json  package.json  plugin.py  postcss.config.js  tailwind.config.js  utils.py  views.py
ckanext/opendata_theme/assets/: webassets.yml
ckanext/opendata_theme/assets/css/: font.css  opendata_theme.css
ckanext/opendata_theme/assets/js/: opendata_theme.js
ckanext/opendata_theme/logic/: action.py  auth.py  schema.py  validators.py
ckanext/opendata_theme/public/: svg-index.html
ckanext/opendata_theme/public/infog/: credits2.html  data.json  data.json.bak  data2.json  index_.html  infografica.html  infografica_complet.html  infografica_old.html  page.html
ckanext/opendata_theme/public/infog/css/: cloudwords.css  custom.css  googlefonts.css  mediaquery.css  timeline.css  timeline2.css  util.css
ckanext/opendata_theme/public/infog/js/: chart.js  chart.js.bak  chart_061223.js.bak  (+2 more)
ckanext/opendata_theme/src/css/: custom-base.css  custom-properties.css  main.css
ckanext/opendata_theme/templates/: base.html  credits.html  footer.html  header.html  infografica.html  page-organization.html  page-read.html  page-resource.html  page-search.html  page.html  report.html
ckanext/opendata_theme/templates/ckanext_pages/: page.html
ckanext/opendata_theme/templates/group/: index.html  read.html
ckanext/opendata_theme/templates/home/: about.html  index.html  layout3.html
ckanext/opendata_theme/templates/organization/: index.html  read.html  read_base.html
ckanext/opendata_theme/templates/package/: read.html  resource_read.html  search.html
ckanext/opendata_theme/templates/snippets/: facet_list.html  license.html  organization.html  package_item.html  package_list.html  pagination.html  search.html  search_form.html  search_result_text.html  social.html
ckanext/opendata_theme/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/opendata_theme/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext_opendata_theme.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+48 files in other folders)
